refactor: sections List 구현체로 변경